--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: stochmod
 Title: Stochastic Modeling
-Version: 1.1
+Version: 1.2
 Author: Artem Sokolov
 Description: Learning and inference algorithms for a variety of probabilistic models
 Maintainer: Artem Sokolov <artem.sokolov@gmail.com>
 License: GPL version 2 or newer
-Depends: R (>= 2.3.1), mvtnorm
-Packaged: Wed Nov  8 18:14:23 2006; sokolov
+Depends: R (>= 2.4.0), mvtnorm
+URL: http://www.cs.colostate.edu/~sokolov/stochmod.html
+Packaged: Thu Jan 18 16:16:52 2007; sokolov
